added functionality to get result from LogGenericFoodActivity

--- a/app/src/main/res/layout/activity_log_custom_meal.xml
+++ b/app/src/main/res/layout/activity_log_custom_meal.xml
@@ -82,6 +82,7 @@
             android:layout_marginEnd="14dp"
             android:layout_marginBottom="70dp"
             android:gravity="center_vertical"
+            android:onClick="openLogGenericFoodActivity"
             android:orientation="horizontal"
             android:visibility="invisible"
             tools:visibility="visible">
