--- a/app/src/main/res/layout/activity_log_custom_meal.xml
+++ b/app/src/main/res/layout/activity_log_custom_meal.xml
@@ -14,7 +14,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView12"
+            android:id="@+id/textView_no_ingredients"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/nothing_to_see_here_yet"
@@ -22,9 +22,11 @@
             tools:layout_editor_absoluteY="42dp" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView_meal_ingredients"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="invisible" />
+            android:visibility="visible" />
+
     </LinearLayout>
 
 
