--- a/app/src/main/res/layout/list_item_food_lookup.xml
+++ b/app/src/main/res/layout/list_item_food_lookup.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:elevation="5dp"
-    android:gravity="center_vertical">
+    app:cardBackgroundColor="@color/cardview_light_background"
+    app:cardCornerRadius="5dp"
+    app:cardElevation="5dp"
+    app:cardUseCompatPadding="true">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:background="@drawable/card_border"
-        android:elevation="5dp"
-        android:padding="10dp"
-        android:shadowColor="#00000000"
-        android:shadowRadius="20"
+        android:padding="5dp"
         android:text="No food found for this query!"
         android:textSize="18sp" />
 
-</FrameLayout>
+</androidx.cardview.widget.CardView>
