--- a/app/src/main/res/layout/list_item_custom_meal_ingredient.xml
+++ b/app/src/main/res/layout/list_item_custom_meal_ingredient.xml
@@ -34,7 +34,7 @@
             android:orientation="horizontal">
 
             <ImageButton
-                android:id="@+id/imageButton2"
+                android:id="@+id/imageButton_edit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -42,7 +42,7 @@
                 app:srcCompat="@drawable/ic_edit" />
 
             <ImageButton
-                android:id="@+id/imageButton"
+                android:id="@+id/imageButton_remove"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
