--- a/app/src/main/res/layout/list_item_custom_meal_ingredient.xml
+++ b/app/src/main/res/layout/list_item_custom_meal_ingredient.xml
@@ -15,12 +15,14 @@
         android:padding="10dp"
         android:weightSum="3">
 
-    <TextView
+        <TextView
             android:id="@+id/textView_ingredient"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="TextView" />
+            android:maxWidth="150dp"
+            android:text="TextView"
+            app:autoSizeTextType="uniform" />
 
         <Space
             android:layout_width="wrap_content"
