added functionality to show nutritional values in LogCustomMealActivity

--- a/app/src/main/res/layout/activity_log_custom_meal.xml
+++ b/app/src/main/res/layout/activity_log_custom_meal.xml
@@ -24,8 +24,21 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView_meal_ingredients"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:visibility="visible" />
+
+        <CheckBox
+            android:id="@+id/checkBox_show_nutritional_values"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="toggleShowNutritionalValues"
+            android:text="Show meal nutritional values" />
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragment_nutritional_values"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
 
     </LinearLayout>
 
