--- a/app/src/main/res/layout/activity_log_custom_meal.xml
+++ b/app/src/main/res/layout/activity_log_custom_meal.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:onClick="logMeal"
     android:orientation="vertical"
     android:padding="20dp"
     tools:context=".Activities.LogCustomMealActivity">
@@ -38,7 +39,15 @@
             android:id="@+id/fragment_nutritional_values"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone" />
+            android:visibility="gone">
+
+        </androidx.fragment.app.FragmentContainerView>
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Log Meal" />
 
     </LinearLayout>
 
