--- a/app/src/main/res/layout/activity_log_custom_meal.xml
+++ b/app/src/main/res/layout/activity_log_custom_meal.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:onClick="logMeal"
     android:orientation="vertical"
     android:padding="20dp"
     tools:context=".Activities.LogCustomMealActivity">
@@ -44,9 +43,11 @@
         </androidx.fragment.app.FragmentContainerView>
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/button_log_meal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:enabled="false"
+            android:onClick="logMeal"
             android:text="Log Meal" />
 
     </LinearLayout>
