--- a/app/src/main/res/layout/fragment_log_meal.xml
+++ b/app/src/main/res/layout/fragment_log_meal.xml
@@ -83,7 +83,18 @@
         android:layout_marginBottom="2dp"
         android:fontFamily="sans-serif-medium"
         android:onClick="openFavoritesActivity"
-        android:text="@string/favorite_meals" />
+        android:text="@string/favorite_meals"
+        android:visibility="gone" />
+
+    <Button
+        android:id="@+id/favorite_products_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
+        android:fontFamily="sans-serif-medium"
+        android:onClick="openFavoriteProductsActivity"
+        android:text="Favorite Products"
+        android:visibility="visible" />
 
     <Button
         android:id="@+id/previous_meals_button"
@@ -92,6 +103,17 @@
         android:layout_marginBottom="2dp"
         android:fontFamily="sans-serif-medium"
         android:onClick="openPreviousMealsActivity"
-        android:text="@string/previous_meals" />
+        android:text="@string/previous_meals"
+        android:visibility="gone" />
+
+    <Button
+        android:id="@+id/previous_meals_button2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
+        android:fontFamily="sans-serif-medium"
+        android:onClick="openProductHistoryActivity"
+        android:text="Previous products"
+        android:visibility="visible" />
 
 </LinearLayout>
