--- a/app/src/main/res/layout/fragment_product_consumption_effects.xml
+++ b/app/src/main/res/layout/fragment_product_consumption_effects.xml
@@ -7,7 +7,6 @@
     android:padding="20dp"
     tools:context=".Fragments.ProductConsumptionEffectsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -29,7 +28,7 @@
             android:textStyle="italic" />
 
         <TextView
-            android:id="@+id/nutriScoreGrade"
+            android:id="@+id/textView_nutriscore_grade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -44,7 +43,7 @@
             android:textStyle="italic" />
 
         <TextView
-            android:id="@+id/novaScoreGrade"
+            android:id="@+id/textView_novascore_grade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
