--- a/app/src/main/res/layout/list_item_consumed_product.xml
+++ b/app/src/main/res/layout/list_item_consumed_product.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:maxWidth="150dp"
+            android:minWidth="150dp"
             android:text="TextView"
             app:autoSizeTextType="uniform" />
 
