--- a/app/src/main/res/layout/fragment_log_new_product.xml
+++ b/app/src/main/res/layout/fragment_log_new_product.xml
@@ -16,15 +16,6 @@
         android:inputType="textPersonName"
         android:textSize="14sp" />
 
-    <EditText
-        android:id="@+id/editText_product_quantity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/product_quantity"
-        android:inputType="numberDecimal"
-        android:textSize="14sp" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -50,7 +41,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Nutritional values (per whole product)"
+        android:text="Nutritional values (per 100g)"
         android:textSize="18sp"
         android:textStyle="italic" />
 
