--- a/app/src/main/res/layout/fragment_product_info.xml
+++ b/app/src/main/res/layout/fragment_product_info.xml
@@ -45,6 +45,14 @@
             android:layout_weight="1"
             android:textStyle="bold" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
