--- a/app/src/main/res/layout/fragment_product_consumption_effects.xml
+++ b/app/src/main/res/layout/fragment_product_consumption_effects.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".Fragments.ProductConsumptionEffectsFragment"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="20dp"
-    tools:context=".Fragments.ProductConsumptionEffectsFragment">
+    android:padding="20dp">
 
     <TextView
         android:layout_width="match_parent"
@@ -294,5 +297,5 @@
 
         </TableRow>
     </TableLayout>
-
 </LinearLayout>
+</ScrollView>
