--- a/app/src/main/res/layout/fragment_log_new_product.xml
+++ b/app/src/main/res/layout/fragment_log_new_product.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_weight="1"
+    tools:context=".Fragments.LogNewProductFragment">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -27,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:paddingRight="10dp"
+            android:paddingEnd="10dp"
             android:text="Measurement unit" />
 
         <Spinner
@@ -230,3 +235,4 @@
         android:textSize="14sp" />
 
 </LinearLayout>
+</ScrollView>
