added loading elements to main activity and log generic food activity

--- a/app/src/main/res/layout/activity_log_generic_food.xml
+++ b/app/src/main/res/layout/activity_log_generic_food.xml
@@ -16,6 +16,14 @@
 
     </SearchView>
 
+    <ProgressBar
+        android:id="@+id/progress_bar_load_food"
+        style="@style/Base.Widget.AppCompat.ProgressBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="gone" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_food_lookup"
         android:layout_width="match_parent"
