--- a/app/src/main/res/layout/fragment_product_info.xml
+++ b/app/src/main/res/layout/fragment_product_info.xml
@@ -90,14 +90,23 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_marginTop="10dp"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/button_log"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginEnd="10dp"
+            android:text="Log Product" />
 
         <Button
             android:id="@+id/button_close"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
+            android:gravity="center"
             android:text="Close" />
     </LinearLayout>
 </LinearLayout>
