--- a/app/src/main/res/layout/activity_log_custom_meal.xml
+++ b/app/src/main/res/layout/activity_log_custom_meal.xml
@@ -17,6 +17,23 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <EditText
+            android:id="@+id/editText_meal_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:ems="10"
+            android:hint="Meal name"
+            android:inputType="textPersonName" />
+
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:text="Meal ingredients:"
+            android:textSize="18sp" />
+
         <TextView
             android:id="@+id/textView_no_ingredients"
             android:layout_width="wrap_content"
