--- a/app/src/main/res/layout/fragment_product_consumption_effects.xml
+++ b/app/src/main/res/layout/fragment_product_consumption_effects.xml
@@ -35,6 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:text="Unknown"
             android:textStyle="bold" />
 
     </LinearLayout>
@@ -57,6 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:text="Unknown"
             android:textStyle="bold" />
     </LinearLayout>
 
