--- a/app/src/main/res/layout/fragment_nutrient_intake.xml
+++ b/app/src/main/res/layout/fragment_nutrient_intake.xml
@@ -2,6 +2,7 @@
     <TableLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context=".Fragments.NutrientIntakeFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -41,8 +42,7 @@
                 android:layout_marginEnd="16dp"
                 android:fontFamily="sans-serif-condensed"
                 android:paddingBottom="2dp"
-                android:text="10%"
-                android:textSize="20sp" />
+                android:textSize="20sp"/>
 
         </TableRow>
 
