--- a/app/src/main/res/layout/fragment_log_new_product.xml
+++ b/app/src/main/res/layout/fragment_log_new_product.xml
@@ -24,22 +24,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:paddingEnd="10dp"
-            android:text="Measurement unit" />
-
-        <Spinner
-            android:id="@+id/spinner_measurement_units"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+        android:orientation="horizontal"/>
 
     <TextView
         android:id="@+id/textView9"
