--- a/app/src/main/res/layout/fragment_product_info.xml
+++ b/app/src/main/res/layout/fragment_product_info.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".Fragments.ProductInfoFragment"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="20dp"
-    tools:context=".Fragments.ProductInfoFragment">
+    android:padding="20dp">
 
     <TextView
         android:id="@+id/textView_product_name"
@@ -110,3 +114,4 @@
             android:text="Close" />
     </LinearLayout>
 </LinearLayout>
+</ScrollView>
